# data-reconciliation

./: .gitignore  README.md  pyproject.toml
src/datarec/: __init__.py  data.py
src/datarec/tables/: __init__.py  _is_close_numeric.py  _is_equal.py  _method_base.py  _reconciler.py  _summarizer.py
src/datarec/utils/: __init__.py  _get_suffixed.py  _set_case.py  functions.py
tests/: queries.py  test_is_close.py  test_is_equal.py  test_summarizer.py
tests/jinja_templates/: distinct_template.md.j2  distinct_template.sql.j2  results_template.md.j2  summary_template.md.j2
tests/marketfee/: base.py  test_marketfee_external.py  test_marketfee_internal.py  test_marketfee_withbase.py
tests/marketfee/sql/: is_equal_q1.sql  is_equal_q2.sql  row_count_q1.sql  row_count_q2.sql
