[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name        = "datarec"
description = "utilities for reconciling data"
version     = "0.1.0"
readme      = "README.md"
dependencies = [
  "polars",
]
authors         = [
  { name = "Chris Mamon", email = "chrisam1993@live.com" },
]