[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name        = "datarec"
description = "utilities for reconciling data"
version     = "0.2.0"
readme      = "README.md"
dependencies = [
  "polars",
]
authors         = [
  { name = "Chris Mamon", email = "chrisam1993@live.com" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]